# p2d

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: CI.yaml  Container.yaml
nix/: p2d.nix  patoh.nix
p2d/: Cargo.toml  build.rs
p2d/src/: main.rs
p2d/src/partitioning/: disconnected_component_datastructure.rs  hypergraph.rs  hypergraph_partitioning.rs  patoh_api.rs
p2d/src/solving/: ddnnf.rs  pseudo_boolean_datastructure.rs  solver.rs
p2d/test_models/: automotive01.opb  automotive2_4.opb  berkeleydb.opb  busybox.opb  financialservices01.opb
p2d_opb/: Cargo.toml
p2d_opb/src/: lib.rs  opb.pest  parser.rs
